it was created first section about students data wit a pupups message

--- a/home.html
+++ b/home.html
@@ -11,8 +11,6 @@
     content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc odio in et, lectus sit lorem id integer.">
   <!-- Icons and favicons -->
   <link rel="icon" type="image/png" href="img/icon.png">
-  <link rel="stylesheet" href="css/icomoon/style.css">
-  <script src="https://kit.fontawesome.com/ce3b26dc73.js" crossorigin="anonymous"></script>
   <!-- STYLES CSS -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="vendor/normalize.css">
@@ -88,7 +86,7 @@
           autocomplete="off"  placeholder=" " action="hide">
           <label class="form__label-pass js-label-pass" for="pass">Contraseña</label>
           <label class="form__label-error-password js-label-error-password" for="pass">error</label>
-          <img class="form__eye js-form-eye" src="./img/eye-open.svg" alt="eye open">
+          <img class="form__eye js-form-eye" src="./img/close-eye.svg" alt="eye open">
         </div>
         <p class="form__description2">
           ¿Olvidaste tu contraseña?
