--- a/login.html
+++ b/login.html
@@ -11,13 +11,16 @@
     content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc odio in et, lectus sit lorem id integer.">
   <!-- Icons and favicons -->
   <link rel="icon" type="image/png" href="img/icon.png">
+  <script src="https://kit.fontawesome.com/ce3b26dc73.js" crossorigin="anonymous"></script>
   <!-- STYLES CSS -->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="vendor/normalize.css">
 </head>
 
 <body>
+  <!-- section header -->
   <header class="header container">
+    <!-- section slider -->
     <section class="slider" aria-label="slider with images">
       <ul class="slider__list js-slider-list">
         <li class="slider__item js-slider-item">
@@ -60,6 +63,7 @@
       <ol class="slider__pagination js-slider-pagination">
       </ol>
     </section>
+    <!-- section login -->
     <section class="form">
       <form class="form__primary"  name="form-primary" >
         <h2 class="form__title">Iniciar sesión</h2>
@@ -91,7 +95,7 @@
         <p class="form__description2">
           ¿Olvidaste tu contraseña?
         </p>
-        <button class="form__button-secondary js-form-button-secondary" type="submit"><a href="dashboard.html">Iniciar sesión</a></button>
+        <button class="form__button-secondary js-form-button-secondary" type="submit"><a class="form__link" href="home.html">Iniciar sesión</a></button>
         <p class="form__description3">
           ¿Aún no tienes cuenta? <span class="form__hightlight-1">Regístrate</span> 
         </p>
